Resolves tdf#159541 - Fix font color must not change depending on background

Change-Id: I954c9e3f8502a5243c664ed0bf066fb4c4cb4ccc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169991
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>