sw/source/core/txtnode/fntcache.cxx
@@ -58,6 +58,7 @@
 #include <cstdint>
 #include <memory>
 #include "justify.hxx"
+#include <svtools/colorcfg.hxx>
 
 using namespace ::com::sun::star;
 
@@ -2293,11 +2294,14 @@ bool SwDrawTextInfo::ApplyAutoColor( vcl::Font* pFont )
             }
 
             // change painting color depending of dark/bright background
-            Color aTmpColor( nNewColor );
-            if ( pCol->IsDark() && aTmpColor.IsDark() )
-                nNewColor = COL_WHITE;
-            else if ( pCol->IsBright() && aTmpColor.IsBright() )
-                nNewColor = COL_BLACK;
+            if (!pVSh->GetWin() || // ie. IsPrinting, see SwViewShell::GetWin()
+                svtools::ColorConfig().GetColorValue(svtools::FONTCOLOR, false).nColor == COL_AUTO) // GetFontColor() uses the smart flag
+            {
+                if ( pCol->IsDark() )
+                    nNewColor = COL_WHITE;
+                else
+                    nNewColor = COL_BLACK;
+            }
         }
     }
 
